--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,11 @@ name = "pypi"
 flask = "*"
 pandas = "*"
 pymongo = "*"
+matplotlib = "*"
+numpy = "*"
+autopep8 = "*"
+jinja2 = "*"
+gunicorn = "*"
 
 [dev-packages]
 
