--- a/Entrega4/Pipfile
+++ b/Entrega4/Pipfile
@@ -7,7 +7,11 @@ name = "pypi"
 flask = "*"
 pandas = "*"
 pymongo = "*"
-logging = "*"
+matplotlib = "*"
+numpy = "*"
+autopep8 = "*"
+jinja2 = "*"
+gunicorn = "*"
 
 [dev-packages]
 
